--- a/my-app/src/components/navbar/navbar.css
+++ b/my-app/src/components/navbar/navbar.css
@@ -4,7 +4,7 @@
   color: white;
   padding: 5px 5px;
   position: fixed;
-  width: 100vw;
+  width: 98vw;
   top: 0;
   left: 0;
   z-index: 1000;
@@ -24,6 +24,7 @@
   font-size: 24px;
   font-weight: bold;
   text-decoration: none;
+  color: white;
   cursor: pointer;
   transition: transform  0.3s ease-in-out;
 }
