--- a/my-app/src/pages/address/address.css
+++ b/my-app/src/pages/address/address.css
@@ -90,7 +90,7 @@
     font-size: 18px;
     opacity: 0.9;
   }
-  .thank-you-message button{
+  .thank-you-message .homeBtn{
     margin-top: 10px;
     padding: 10px 20px;
     background: #522a3b;
@@ -99,10 +99,39 @@
     font-size: 16px;
     border-radius: 10px;
     cursor: pointer;
+    margin: 10px;
     transition: all 0.3s ease-in-out;
   }
   
-  .thank-you-message button:hover {
+  .thank-you-message .homeBtn:hover {
+    background: #333;
+    box-shadow: 0px 5px 10px rgba(255, 255, 255, 0.4);
+  }
+  /* Fade-in Animation */
+  @keyframes fadeIn {
+    from {
+      opacity: 0;
+      transform: scale(0.9);
+    }
+    to {
+      opacity: 1;
+      transform: scale(1);
+    }
+  }
+  .thank-you-message .ordersBtn{
+    margin-top: 10px;
+    padding: 10px 20px;
+    background: #522a3b;
+    color: white;
+    border: none;
+    font-size: 16px;
+    border-radius: 10px;
+    cursor: pointer;
+    margin: 10px;
+    transition: all 0.3s ease-in-out;
+  }
+  
+  .thank-you-message .ordersBtn:hover {
     background: #333;
     box-shadow: 0px 5px 10px rgba(255, 255, 255, 0.4);
   }
