--- a/my-app/src/components/navbar/navbar.css
+++ b/my-app/src/components/navbar/navbar.css
@@ -3,7 +3,7 @@
   background: #1a1a1a;
   color: white;
   padding: 5px 5px;
-  position: fixed;
+  position: static;
   width: 98vw;
   top: 0;
   left: 0;
