--- a/my-app/src/components/navbar/navbar.css
+++ b/my-app/src/components/navbar/navbar.css
@@ -114,7 +114,7 @@
     gap: 10px;
     padding: 20px;
     border-radius: 10px;
-    transform: translateX(100%);
+    transform: translatey(-900px);
     transition: transform 0.3s ease-in-out;
   }
 
