--- a/my-app/src/pages/cartedProducts/cartedProducts.css
+++ b/my-app/src/pages/cartedProducts/cartedProducts.css
@@ -2,7 +2,6 @@
 .cart-container {
   max-width: 800px;
   margin: auto;
-  margin-top: 100px;
   padding: 20px;
   text-align: center;
 }
@@ -102,38 +101,21 @@ p {
   }
 }
 
-.totalPrice{
-  position: fixed;
-  bottom: 5px;
-  left: 15px;
-  font-size: 16px;
-  color: #ff6b6b;
-  font-weight: bold;
-  outline-width: 2px;
-  outline-color: #ff6b6b;
-  outline-style: solid;
-  outline-offset: 2px;
-  padding: 5px 10px;
-  border-radius: 5px;
-  background: white;
-  transition: background 0.3s ease-in-out;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-  cursor: pointer;
-  z-index: 999;
-  
-  &:hover {
-    background: #ff4b4b;
-    color: white;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
-    transform: translateY(2px);
-    transition: transform 0.3s ease-in-out;
+/* Responsive Design */
+@media screen and (max-width: 768px) {
+  .cart-item {
+    flex-direction: column;
+    text-align: center;
   }
-  &:active {
-    background: #ff3333;
-    color: white;
+
+  .cart-image {
+    width: 80%;
+    max-width: 200px;
+    margin-bottom: 10px;
   }
-  &:focus {
-    outline: none;
+
+  .cart-info {
+    text-align: center;
   }
 }
 
@@ -308,17 +290,3 @@ p {
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
   }
 }
-
-
-
-/* @keyframes bounce {
-  0%, 100% {
-    transform: translateY(0);
-  }
-  50% {
-    transform: translateY(-5px);
-  }
-} */
-
-
-
