--- a/my-app/src/pages/productDetail/productDetail.css
+++ b/my-app/src/pages/productDetail/productDetail.css
@@ -2,7 +2,7 @@
 
 /* General page styles */
 .product-detail {
-  padding: 20px;
+  /* padding: 20px; */
   background-color: #f4f4f4;
   display: flex;
   justify-content: center;
